# basic_algo

./: BST.py  quick_sort.py
cpp/: BST.cpp  CMakeLists.txt  main.cpp  quick_sort.cpp  quick_sort_2.cpp
cpp/include/: Stack_dynamic.h  Stack_static.h
cpp/src/: Stack_dynamic.cpp  Stack_static.cpp
python/: BST.py  Backtracking.py  LinkedList.py  Singleton.py  Stack.py  heap_sort.py  merge_sort.py
